Ajuste imports